# digit_ros2

./: .gitignore  README.md
.devcontainer/: devcontainer.json
digit_hardware/: CMakeLists.txt  package.xml
digit_hardware/include/digit_hardware/: digit_comm.hpp
digit_hardware/scripts/: digit_json.py
digit_hardware/src/: digit_comm.cpp
digit_launch/: CMakeLists.txt  package.xml
digit_launch/launch/: simulation.launch.py
